final version for submission

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <body>
         <header>header</header>
         <nav>nav</nav>
-        <section>section
-            <article>article
-                <h1>h1, h2, h3</h1>
-                <p>p</p>
+        <section><p>section</p>
+            <article><p>article</p>
+                <div><h1>h1, h2, h3</h1></div>
+                <div>p</div>
             </article>   
         </section>
         <aside>aside</aside>
